syntax = "proto3";

package crud;

service CrudService {
  rpc FindOneUser (ById) returns (User) {}
  rpc FindOneProduct (ById) returns (Product) {}
}

message ById {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}

message Product {
  int32 id = 1 ;
  string name = 2;
}