syntax = "proto3";

package crud;

service CrudService {
  rpc FindOne (ById) returns (User) {}
  rpc AddNewUser (UserData) returns (User) {}
  rpc UpdateUser (UpdateUser) returns (User) {}
  rpc DeleteUser (ById) returns (StringResponse) {}
  rpc FindOneProduct (ById) returns (ProductView) {}
  rpc AddNewProduct (Product) returns (ProductView) {}
  rpc UpdateProduct (UpdateProduct) returns (ProductView) {}
  rpc DeleteProduct (ById) returns (StringResponse) {}
}

message StringResponse {
  string response = 1;
}

message ById {
  int32 id = 1;
}

message UserData {
  User newUser = 1;
}

message User {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UpdateUser {
  string name = 1;
  string email = 2;
  string password = 3;
  int32 id = 4;
}

message Product {
  string title = 1;
  float price = 2;
  string description = 3;
  string category = 4;
  string image = 5;
}

message ProductView {
  int32 id = 1;
  string title = 2;
  float price = 3;
  string description = 4;
  string category = 5;
  string image = 6;
}

message UpdateProduct {
  Product product = 1;
  int32 id = 2;
}



